ops/kubernetes-FOLDER/kub-actions/kuard-pod-health.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  volumes:
    - name: "kuard-data"
      nfs:
        server: my.nfs.server.local
        path: "/exports"
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:blue
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      resources:
  requests: #### Minimal ressourced given
    cpu: "500m"
    memory: "128Mi"
  limits:
    cpu: "1000m"
    memory: "256Mi"
  volumeMounts:
    - mountPath: "/data"
      name: "kuard-data"
  livenessProbe:
    httpGet:
      path: /healthy  ### The url of the page that is tested it can be /home 
      port: 8080
    initialDelaySeconds: 5
    timeoutSeconds: 1
    periodSeconds: 20 # All 20 secondes there are a request that test if the container is OK 
    failureThreshold: 3 # If 3 times with a request fail, the container is restarted
  readinessProbe:
    httpGet:
      path: /ready
      port: 8080
    initialDelaySeconds: 30
    timeoutSeconds: 1
    periodSeconds: 10
    failureThreshold: 3
