ops/kubernetes-FOLDER/kub-actions/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  defaultBackend:
    service:
    name: alpaca
    port:
      number: 8080
