ops/kubernetes-FOLDER/kub-actions/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
  - hosts:
    - alpaca.example.com
    secretName: tls-secret-name
  rules:
  - host: alpaca.example.com
  http:
    paths:
    - backend:
      serviceName: alpaca
      servicePort: 8080
